    standard), since the HTTP header already contains that.

* General
  - [26 Jun 00] In programs ged2gwb (gedcom import), gwb2ged (gedcom export),
    consang (consanguinity initialization) and gwu (uncompiler), added an
    error message in case of several input files are given (these programs can
    treat only one file at a time).

* Base configuration files (base.gwf)
  - [17 Jun 00] By default now, the "can_send_image" is "yes", meaning that
    if you specify nothing, the "send image" is proposed in update pages. To
    unset it, you must now specify: can_send_image=no

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [20 Jun 00] Added entry !language for the translation of languages names
    in all languages. Used as labels associated with the flags of welcome
    pages.
  - [14 Jun 00] Completed and fixed Portuguese version (Jose Paulo Moitinho
    de Almeida).
  - [14 Jun 00] Completed Dutch lexicon (Bernard Ceurstemont).

* Documentation
  - [26 Jun 00] In update.htm, added that images in png format are accepted,
    like "gif" and "jpeg" ones.

GeneWeb version 3.05
--------------------

* GeneWeb Service/CGI (gwd)
  - [03 Jun 00] In history, added an input field before the ">>" to be able
    to specify a number of entries to be displayed in the next page.
  - [02 Jun 00] Merge of individuals faster now: can automatically merge
    families and individuals when they are identical in both ancestors trees.
  - [23 May 00] In "divorce" section, added case "separated".
  - [18 May 00] In displaying by places/surnames, baptism places are added
    with birth places and burial with death.
  - [17 May 00] Added an "Ok" button after the password input area
    in CGI mode.
  - [14 May 00] Added case "engaged" in "family" forms.
  - [14 May 00] Added option "-images_url" to give an URL to GeneWeb
    images (flags, logo, background, up arrow). Can be useful e.g. in
    cgi mode if the associated Web server answers faster than gwd. By